tests/NormalTests/paczka2/big_fuzzy/58443642.err
Error in line 6: S779 S77 31,0
Error in line 8: S779 A379 10,8
Error in line 36: eHv4msfhWj S779 78,57
Error in line 33: N2xPPlJ62P8 A493 96,1
Error in line 49: eHv4msfhWj S779 93,7
Error in line 46: N2xPPlJ62P8 A379 80,7
Error in line 76: LOaT9NY A379 48,2
Error in line 78: LOaT9NY S779 -1,4
Error in line 79: NFcZrZ A379 31,4
Error in line 64: eHv4msfhWj A379 72,0
Error in line 89: LOaT9NY S779 37,6
Error in line 83: NFcZrZ S779 48,8
Error in line 87: drV06q S77 28,4
Error in line 92: LOaT9NY S77 54,4
Error in line 107: N2xPPlJ62P8 A379 36,2
Error in line 113: N2xPPlJ62P8 S779 17,5
Error in line 115: drV06q S779 41,5
Error in line 127: eHv4msfhWj S779 36,1
Error in line 126: LOaT9NY S77 75,4
Error in line 142: drV06q A493 4,0
Error in line 152: LOaT9NY A493 -2,6
Error in line 147: eHv4msfhWj S77 10,9
Error in line 157: S779 S77 87,2
Error in line 161: S779 A379 39,4
Error in line 149: LOaT9NY A493 70,5
Error in line 187: N2xPPlJ62P8 S779 10,0
Error in line 194: S779 A379 17,8
Error in line 207: NFcZrZ A493 46,8
Error in line 200: 2pzw S77 56,9
Error in line 214: N2xPPlJ62P8 S77 370,4
Error in line 223: 2pzw S779 66,4
Error in line 224: 2pzw A379 43,8
Error in line 234: S779 A379 8,48
Error in line 235: drV06q A379 79,8
Error in line 189: eHv4msfhWj A379 135,7
Error in line 240: S779 A379 29,9
Error in line 246: eHvamsfhWj Aa93 61,2
